# SAWGAD

./: .gitignore  README.md  pyproject.toml
sawgad/: anomaly.py  data.py  main.py  model.py  seed.py  train.py
